--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.11.12",
     "@types/express": "^5.0.0",
